--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
 		</li>
 	</ul>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
+<!-- 	<script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script> -->
+	<script src="https://cdn.bootcss.com/vue/2.5.16/vue.min.js"></script>
+	
 	<script>
 	var vm = new Vue({
   		el:"#app",
